*** Changes since avr-libc-2.0.0:

* Bugs fixed:

  [#36933] Documentation no longer correctly describes how to declare
  [#41689] add static_assert to assert.h
  [#48898] power_usart3_* functions no more defined in power.h
  [#49020] dtostre() flags documentation error
  [#49447] Example code for uart_putchar() has error in recursive call
  strings for storage in program memory

* New devices supported:

* Contributed Patches:

  [no-id] Define weak symbols for known memory region sizes based on device 
  header definitions, starting with fuse region.
  [#8961] Update test script for new simulavr and library layout
  [#8964] Update tests isinf-01.c, signbit-01.c and modf-np.c
  [#9163] New eeprom write block function for xmega using eeprom page write

* Other changes:


*** Changes in avr-libc-2.0.0:

* General:

    This is the first official release supporting AVR-GCC 5 (and above).

* Bugs fixed:

  [#33698] Explicit use of RJMP/RCALL can cause "relocation truncated to fit:
           R_AVR_13_PCREL" linker error
  [#34719] Check for right build compiler
  [#43011] Bug in struct definition of __reg_UCSR1C and __reg_UCSR0C in iom128rfa1.h
  [#43044] memory sections require __attribute__ ((used))
  [#43828] wdt.h: Wrong inline assembler arguments
  [#44140] wdt_disable() macro clobbers prescaller bits
  [#44279] incorrect USB_TRNCOMPL_vect_num in iox64a1u.h, iox128a1u.h
  [#44515] Wrong build option '-mtiny-stack' instead of '-msp8'
  [#44574] Place device-specific libraries in their multilib directory
  [#44869] trunk doesn't work with gcc 5.1.0-RC-20150412
  [#44977] Incorrect PORT_t and CRC_t definitions for ATxmega64A1U and 128A1U
  [#45539] iom32u4.h defines reserved IO address (TIMSK2 (0x70), TIMSK5 (0x73) etc)
  [#45551] Power-save mode not supported for ATtiny167
  [#36303] Wrong hour for EU Summertime
  [#44514] Wrong build option '-mtiny-stack' instead of '-msp8'
  [no-id] TC_EVACT_FRQ_gc was misspelled as TC_EVACT_FRW_gc in some Xmega